# autoaim-rm2022-SWJTU

./: CMakeLists.txt  README.md  RMSelfStart.sh  config.h  config.h.in  main.cpp
Armor/include/: ArmorDetector.hpp
Armor/resource/: conf.cfg
Armor/src/: ArmorDetector.cpp
Detector/Armor/: Armor.yaml  ArmorDetector.cpp  ArmorDetector.hpp  armor_detetctor.cpp
Detector/Armor/Params/: ArmorParamsImage.xml  ArmorParamsSentry.xml  ArmorParamsVideo.xml
Detector/Armor/include/: ArmorDetector.hpp  NumberClassifier.h
Detector/Armor/model/: model_nin.onnx
Detector/Armor/src/: ArmorDetector.cpp  NumberClassifier.cpp  armor_detetctor.cpp
Detector/Energy/: EnergyDetector.cpp  EnergyDetector.h  fan_param.yaml  struct_define.h
Detector/Energy/include/: EnergyDetector.h
Detector/Energy/src/: EnergyDetector.cpp
Detector/resource/: 527.weights  528.weights  all.weights  far.weights  near.weights  svm.xml  voc.names
Drivers/: Driver.h
Drivers/DAHUA/Media/: RMDriver.h
Drivers/DAHUA/src/: RMDriver.cpp
Drivers/ImageWriter/include/: ImageWriter.hpp
Drivers/ImageWriter/src/: ImageWriter.cpp
Drivers/MindVision/include/: CameraApi.h  CameraStatus.h  MindDriver.h  MindVision.h
Drivers/MindVision/src/: MindDriver.cpp  MindVision.cpp
Drivers/V4L2KAS/src/: V4L2KAS.cpp
Drivers/VideoDriver/include/: VideoDriver.hpp
Drivers/VideoDriver/src/: VideoDriver.cpp
Energy/include/: EnergyDetector.h
Energy/src/: EnergyDetector.cpp
Math/Filter/: Filter.cpp  Filter.h
Math/Kalman/: Kalman.cpp  Kalman.hpp
Math/RMKF/: RMKF.cpp  RMKF.hpp
Math/SolveAngle/: SolveAngle.cpp  SolveAngle.hpp  camera.xml
Other/include/: mydefine.h  utility.hpp
Other/src/: mydefine.cpp  preoptions.cpp  systime.cpp
Predictor/: EnergyPredictor.cpp  Predictor.cpp  Predictor.h  Predictor.yaml
Serials/: SerialPort.cpp  SerialPort.hpp
Thread/: Fifo.h  MyThread.cpp  MyThread.hpp
Thread/include/: MyThread.hpp
Thread/src/: MyThread .copy  MyThread.cpp
